fixed logic bugs regarding the gameplay